# wx_stock

./: ..\download\美制圆板牙.xlsx  .env  .eslintrc  .gitignore  .~lock.客户数据导入格式.xlsx#  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.sh  cart_height_adjustment.md  cart_modifications.md  cart_scrollbar_fix.md  cart_ui_fixes.md  config.html  fix_order_items_table.sql  functions.sql  new_config.html  orders_badge_implementation.md  package-lock.json  package.json  pic.rs  put.sh  run.sh  sales.sql  set.sql  setup_cart_table.sql  setup_orders.sql  shopping_cart.sql  test_cart.md  供应商导入数据格式.xlsx  客户数据导入格式.xlsx  导入更新格式.xlsx  库存.xlsx  库存导入格式.xlsx  库存导入格式2.xlsx  数据初始化  软件修改编译发布说明
.cargo/: config.toml
download/: 17-4 无缝钢管.xlsx  718 圆钢.xlsx  Super13Cr 圆钢.xlsx  p.xlsx  业务往来明细表.xlsx  供应商.xlsx  入库明细表.xlsx  公制圆板牙.xlsx  出库明细表.xlsx  客户.xlsx  美制圆板牙.xlsx  英制管螺纹圆板牙.xlsx
scripts/: README.md  build.sh
scss/: _alert.scss  _checkbox.scss  _notify.scss  _variables.scss  login.scss  min.bash  min.sh  print.scss  sales.scss  test.scss
src/: build.rs  business.rs  buyin.rs  cart.rs  customer.rs  dd  documentquery.rs  field_set.rs  home.rs  html.rs  information.rs  main.rs  material.rs  orders.rs  product.rs  product2.rs  report_design.rs  sale_person.rs  service.rs  sql  statistic.rs  stock_query.rs  system_set.rs  systemset.rs  tree.rs  user.rs  user_manage.rs  user_set.rs  useraes.rs  warehouse_set.rs
static/: base.js  businessquery.js  buyin.js  cart.js  cart_page.js  customer.js  documentquery.js  fieldset.js  general.js  home.js  kp.js  login.css  login.css.map  login.js  material.js  materialout.js  myorders.js  productset.js  query2.js  sales.css  sales.css.map  stockin.js  stockinitems.js  stockout.js  stockoutitems.js  tools_service.js  transitems.js  transport.js  usermanage.js  userset.js
statics/: general.js
templates/: base.rs.html  businessquery.rs.html  buyin.rs.html  buyquery.rs.html  cart.rs.html  coststatis.rs.html  customer.rs.html  debt.rs.html  debtquery.rs.html  fieldset.rs.html  help_say.rs.html  home.rs.html  kp.rs.html  login.rs.html  material.html  material.rs.html  materialout.rs.html  myorders.rs.html  productset.rs.html  query.rs.html  query2.rs.html  reportdesign.rs.html  sale.rs.html  saleanalys.rs.html  saleperson.rs.html  saletrans.rs.html  statis.rs.html  stock.rs.html  stockin.rs.html  stockinitems.rs.html  stockinout.rs.html  stockout.rs.html  (+8 more)
(+257 files in other folders)
