[package]
name = "sales"
version = "0.1.0"
authors = ["sam <samlink@126.com>"]
edition = "2018"

build = "src/build.rs"

[build-dependencies]
ructe = "0.13"

[dependencies]
time = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-multipart = "0.3"
actix-identity = "0.3"

futures = "0.3.1"
sanitize-filename = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

postgres = "0.17.5"
tokio-postgres = "0.5.5"
deadpool-postgres = "0.5.6"
config = "0.10.1"
dotenv = "0.15.0"

rust-crypto = "0.2.36"
rand = "0.7.3"
reqwest = "0.9"
regex = "1"
async-recursion = "0.2"
xlsxwriter = "0.3"
calamine = "0.16.1"
rust-pinyin = "0.1.1"