[package]
name = "wx-stock"
version = "0.1.0"
authors = ["sam <samlink@126.com>"]
edition = "2021"

build = "src/build.rs"

[build-dependencies]
ructe ={ version= "0.17", features = ["mime03"]}

[dependencies]
time = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
mime = "0.3"

actix-web = "4.7"
actix-files = "0.6"
actix-multipart = "0.6.1"
actix-identity = "0.4"

futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

postgres = "0.19.7"
tokio-postgres = "0.7.10"
deadpool-postgres = { version="0.12.1", features = ["serde"] }
config = "0.13.4"
dotenv = "0.15.0"
# image = "0.24.7"

rust-crypto = "0.2.36"
rand = "0.7.3"
# reqwest = "0.9"
regex = "1"
async-recursion = "1.0.5"
xlsxwriter = "0.6.0"
calamine = "0.16.1"
rust-pinyin = "0.1.3"